import {
  CompanyType,
  Line,
  LineType,
  OperationStatus,
  StopCondition,
} from '../../src/gen/stationapi_pb'

export const TOEI_SHINJUKU_LINE_LOCAL: Line.AsObject = {
  lineSymbolsList: [
    {
      symbol: 'S',
      color: '#B0BF1E',
      shape: 'ROUND',
    },
  ],
  id: 99304,
  nameShort: '都営新宿線',
  nameKatakana: 'トエイシンジュクセン',
  nameFull: '都営新宿線',
  nameRoman: 'Toei Shinjuku Line',
  nameChinese: '都营新宿线',
  nameKorean: '도에이 신주쿠선',
  color: '#B0BF1E',
  lineType: LineType.SUBWAY,
  status: OperationStatus.INOPERATION,
  station: {
    linesList: [],
    stationNumbersList: [
      {
        lineSymbol: 'S',
        lineSymbolColor: '#B0BF1E',
        lineSymbolShape: 'ROUND',
        stationNumber: 'S-01',
      },
    ],
    id: 9930401,
    groupId: 1130208,
    name: '新宿',
    nameKatakana: 'シンジュク',
    nameRoman: 'Shinjuku',
    nameChinese: '新宿',
    nameKorean: '신주쿠',
    prefectureId: 13,
    postalCode: '160-0023',
    address: '東京都新宿区西新宿一丁目18',
    latitude: 35.68869,
    longitude: 139.698812,
    openedAt: '0000-00-00',
    closedAt: '0000-00-00',
    status: OperationStatus.INOPERATION,
    stopCondition: StopCondition.ALL,
    hasTrainTypes: true,
  },
  company: {
    id: 119,
    railroadId: 99,
    nameShort: '都営',
    nameKatakana: 'トウキョウトコウツウキョク',
    nameFull: '東京都交通局',
    nameEnglishShort: 'Toei',
    nameEnglishFull: 'Toei',
    type: CompanyType.OTHERCOMPANY,
    status: OperationStatus.INOPERATION,
    name: '東京都交通局',
    url: 'http://www.kotsu.metro.tokyo.jp/',
  },
}

export const RYOMO_LINE: Line.AsObject = {
  lineSymbolsList: [],
  id: 11341,
  nameShort: '両毛線',
  nameKatakana: 'リョウモウセン',
  nameFull: '両毛線',
  nameRoman: 'Ryomo Line',
  nameChinese: '两毛线',
  nameKorean: '료모선',
  color: '#FFD400',
  lineType: LineType.NORMAL,
  status: OperationStatus.INOPERATION,
  station: {
    linesList: [],
    stationNumbersList: [],
    id: 1134101,
    groupId: 1131816,
    name: '高崎',
    nameKatakana: 'タカサキ',
    nameRoman: 'Takasaki',
    nameChinese: '高崎',
    nameKorean: '다카사키',
    prefectureId: 10,
    postalCode: '370-0849',
    address: '群馬県高崎市八島町',
    latitude: 36.322239,
    longitude: 139.012354,
    openedAt: '0000-00-00',
    closedAt: '0000-00-00',
    status: OperationStatus.INOPERATION,
    stopCondition: StopCondition.ALL,
    hasTrainTypes: true,
  },
  company: {
    id: 2,
    railroadId: 11,
    nameShort: 'JR東日本',
    nameKatakana: 'ジェイアールヒガシニホン',
    nameFull: '東日本旅客鉄道株式会社',
    nameEnglishShort: 'JR East',
    nameEnglishFull: 'JR East',
    type: CompanyType.JR,
    status: OperationStatus.INOPERATION,
    name: 'JR東日本',
    url: 'http://www.jreast.co.jp/',
  },
}
